[metadata]
name = mezzanine_gasStation_map
version = 0.1
description = A mezzanine plugin
long_description = file: README.rst
url = http://127.0.0.1/
author = Gustavo Alfredo Zarate Acosta, Antonio Chacon Flores 
author_email = gustavoza20@gmail.com
license = CC  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
